@@ -27,6 +27,7 @@
     <imgscalr.version>4.2</imgscalr.version>
     <jacoco-maven-plugin.version>0.8.14</jacoco-maven-plugin.version>
     <java.version>25</java.version>
+    <sqlite.native.access.flag>--enable-native-access=ALL-UNNAMED</sqlite.native.access.flag>
     <spring-javaformat-maven-plugin.version>0.0.47</spring-javaformat-maven-plugin.version>
     <telegrambots.version>9.5.0</telegrambots.version>
   </properties>
@@ -60,6 +61,11 @@
       <groupId>org.imgscalr</groupId>
       <artifactId>imgscalr-lib</artifactId>
       <version>${imgscalr.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.xerial</groupId>
+      <artifactId>sqlite-jdbc</artifactId>
+      <version>3.50.3.0</version>
     </dependency>
 
     <dependency>
@@ -115,6 +121,7 @@
               <artifactId>lombok</artifactId>
             </exclude>
           </excludes>
+          <jvmArguments>${sqlite.native.access.flag}</jvmArguments>
           <docker>
             <publishRegistry>
               <username>${CI_REGISTRY_USER}</username>
@@ -158,15 +165,6 @@
         <groupId>io.spring.javaformat</groupId>
         <artifactId>spring-javaformat-maven-plugin</artifactId>
         <version>${spring-javaformat-maven-plugin.version}</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>validate</goal>
-            </goals>
-            <phase>validate</phase>
-            <inherited>true</inherited>
-          </execution>
-        </executions>
       </plugin>
       <plugin>
         <groupId>org.jacoco</groupId>
@@ -187,6 +185,13 @@
             <phase>verify</phase>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>@{argLine} ${sqlite.native.access.flag}</argLine>
+        </configuration>
       </plugin>
     </plugins>
   </build>
